Fix clipping of letters - e.g. 'g' - in the agent list display name.

--- a/app/palette/css/style.css
+++ b/app/palette/css/style.css
@@ -236,7 +236,7 @@ article.popup p {
     font-size: 16px;
     font-weight: 300;
     width: 100%;
-    overflow: hidden;
+    overflow: visible;
     text-overflow:ellipsis;
     white-space: nowrap;
     display: block;
